--- a/streamapp/templates/streamapp/home.html
+++ b/streamapp/templates/streamapp/home.html
@@ -2,9 +2,23 @@
   <head>
     <title>Face Mask Detection</title>
   </head>
+  <style>
+    h1{
+      text-align: center;
+    }
+    img{
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 58%;
+    }
+    body{
+      background-color: antiquewhite;
+    }
+  </style>
   <body>
     <h1>Face Mask Detection</h1>
     <img src="{% url 'mask_feed' %}">
-	<img src="{% url 'livecam_feed' %}">
+	<!-- <img src="{% url 'livecam_feed' %}"> -->
   </body>
 </html>
